--- a/src/components/containers/shopping-cart/styles.css
+++ b/src/components/containers/shopping-cart/styles.css
@@ -43,6 +43,11 @@
     padding: 20px;
 }
 
+.scroll {
+    height: 100%;
+    overflow-y: auto;
+}
+
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
