--- a/src/components/dumb/welcome-sign/styles.css
+++ b/src/components/dumb/welcome-sign/styles.css
@@ -13,7 +13,8 @@
   justify-content: center;
   align-content: center;
 	flex-direction: column;
-	
+  
+  padding: 10px;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
